// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Time component Should default render 1`] = `
<div>
  <div
    class="APMTime"
  >
    <div
      class="APMTime-display"
    >
      <div
        class="APMTime-display-panel"
      >
        <div
          class="APMTime-display-panel-label"
        >
          <span
            class="APMTime-display-panel-number"
          >
            12
          </span>
          <span
            class="APMTime-display-panel-letter"
          >
            h
          </span>
        </div>
      </div>
      <div
        class="APMTime-separator"
      >
        <div
          class="APMTime-separator-stroke"
        />
        <div
          class="APMTime-separator-stroke"
        />
      </div>
      <div
        class="APMTime-display-panel"
      >
        <div
          class="APMTime-display-panel-label"
        >
          <span
            class="APMTime-display-panel-number"
          >
            12
          </span>
          <span
            class="APMTime-display-panel-letter"
          >
            m
          </span>
        </div>
      </div>
    </div>
    <div
      class="APMTime-sliders"
    >
      <div
        class="APMTime-slider"
      >
        <div
          class="APMTime-slider-label"
        >
          Hours
        </div>
        <div
          class="APMSlider"
        >
          <div
            class="APMSlider-value"
          />
          <div
            class="APMSlider-handle"
            data-testid="slider-handle"
            style="height: 38px; width: 38px;"
          />
        </div>
      </div>
      <div
        class="APMTime-slider"
      >
        <div
          class="APMTime-slider-label"
        >
          Minutes
        </div>
        <div
          class="APMSlider"
        >
          <div
            class="APMSlider-value"
          />
          <div
            class="APMSlider-handle"
            data-testid="slider-handle"
            style="height: 38px; width: 38px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Time component Should match snapshot with className 1`] = `
<div>
  <div
    class="APMTime Figs Figs"
  >
    <div
      class=" APMTime-display Figs-display"
    >
      <div
        class=" APMTime-display-panel Figs-display-panel"
      >
        <div
          class=" APMTime-display-panel-label Figs-display-panel-label"
        >
          <span
            class=" APMTime-display-panel-number Figs-display-panel-number"
          >
            12
          </span>
          <span
            class=" APMTime-display-panel-letter Figs-display-panel-letter"
          >
            h
          </span>
        </div>
      </div>
      <div
        class=" APMTime-separator Figs-separator"
      >
        <div
          class=" APMTime-separator-stroke Figs-separator-stroke"
        />
        <div
          class=" APMTime-separator-stroke Figs-separator-stroke"
        />
      </div>
      <div
        class=" APMTime-display-panel Figs-display-panel"
      >
        <div
          class=" APMTime-display-panel-label Figs-display-panel-label"
        >
          <span
            class=" APMTime-display-panel-number Figs-display-panel-number"
          >
            12
          </span>
          <span
            class=" APMTime-display-panel-letter Figs-display-panel-letter"
          >
            m
          </span>
        </div>
      </div>
    </div>
    <div
      class=" APMTime-sliders Figs-sliders"
    >
      <div
        class=" APMTime-slider Figs-slider"
      >
        <div
          class=" APMTime-slider-label Figs-slider-label"
        >
          Hours
        </div>
        <div
          class="APMSlider"
        >
          <div
            class="APMSlider-value"
          />
          <div
            class="APMSlider-handle"
            data-testid="slider-handle"
            style="height: 38px; width: 38px;"
          />
        </div>
      </div>
      <div
        class=" APMTime-slider Figs-slider"
      >
        <div
          class=" APMTime-slider-label Figs-slider-label"
        >
          Minutes
        </div>
        <div
          class="APMSlider"
        >
          <div
            class="APMSlider-value"
          />
          <div
            class="APMSlider-handle"
            data-testid="slider-handle"
            style="height: 38px; width: 38px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
